--- a/deploytools/ansible-playbooks/roles/itcraftsmanpl.php7/defaults/main.yml
+++ b/deploytools/ansible-playbooks/roles/itcraftsmanpl.php7/defaults/main.yml
@@ -7,7 +7,7 @@ php_packages:
   - php7.0-curl
   - php7.0-cgi
   - php7.0-fpm
-  - php7.0-mysql
+  - php7.0-sqlite3
   - php7.0-gd
   - php7.0-mbstring
   - php7.0-mcrypt
