settings for incoming git repo

--- a/deploytools/ansible-playbooks/roles/tips-config/tasks/main.yml
+++ b/deploytools/ansible-playbooks/roles/tips-config/tasks/main.yml
@@ -1,10 +1,15 @@
 ---
+- name: create dir for repo
+	file: 
+		path: /home/tips 
+		state: directory
+
 - name: Clone Git Repo into /home/tips/
 	repo: https://github.com/panzerama/NSC-AD410-TIP-GROUP1.git
 	dest: /home/tips
 
 - name: Set permissions on Application Directory
-  file: path=/home/tips/prod state=directory mode=775 owner=www-data group=www-data recurse=yes
+    file: path=/home/tips/prod state=directory mode=775 owner=www-data group=www-data recurse=yes
 
 - name: Create symlink between /var/www/domain.com and /home/tips/prod/
 	shell: ln -s /home/tips/prod /var/www/162.243.130.59
