--- a/prod/composer.json
+++ b/prod/composer.json
@@ -7,7 +7,10 @@
     "require": {
         "php": ">=5.6.4",
         "laravel/framework": "5.4.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "yajra/laravel-datatables-oracle": "^7.0",
+        "yajra/laravel-datatables-html": "^1.0",
+        "yajra/laravel-datatables-buttons": "^1.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
