--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "yajra/laravel-datatables-oracle": "^7.5"
+        "yajra/laravel-datatables-oracle": "^7.0",
+        "yajra/laravel-datatables-html": "^1.0"
     }
 }
